setup aws s3, starting post crud

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 MONGODB_URI=mongodb://127.0.0.1:27017/your_db_name
 ACCESS_TOKEN_SECRET=secret_token
+AWS_BUCKET_NAME=your_bucket_name
+AWS_REGION=the-bucket-region
+AWS_ACCESS_KEY=user_access_key
+AWS_SECRET_ACCESS_KEY=user_secret_access_key
+
