--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "SET DEBUG=konexi-be-test:* & nodemon ./bin/www"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.391.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -14,7 +15,9 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
